Fixed submitting capy on mobile

--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -250,7 +250,7 @@ input:focus {
 @media only screen and (max-width: 930px) {
     .capybara-stats {
         display: block;
-        width: 100%;
+        width: 100vw;
     }
 }
 
